--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,21 @@ entrypoint = "./functions/create-payment/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/create-payment/*.html" ]
+
+[functions.send-email]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-email/deno.json"
+entrypoint = "./functions/send-email/index.ts"
+
+[functions.send-whatsapp]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-whatsapp/deno.json"
+entrypoint = "./functions/send-whatsapp/index.ts"
+
+[functions.send-reminders]
+enabled = true
+verify_jwt = false  # Não precisa de JWT pois será chamado por cron
+import_map = "./functions/send-reminders/deno.json"
+entrypoint = "./functions/send-reminders/index.ts"
